treewide: Migrate to Java 21
Reference: https://docs.openrewrite.org/recipes/java/migrate/upgradetojava21